// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VTreeViewNode.ts should be able to have active children with empty array 1`] = `
<div class="v-treeview-node v-treeview-node--leaf v-treeview-node--click"
     aria-expanded="false"
>
  <div class="v-treeview-node__root v-treeview-node--active primary--text">
    <div class="v-treeview-node__level">
    </div>
    <div class="v-treeview-node__content">
      <div class="v-treeview-node__label">
        Child
      </div>
    </div>
  </div>
</div>
`;

exports[`VTreeViewNode.ts should generate a transition element 1`] = `
<div class="v-treeview-node v-treeview-node--leaf"
     aria-expanded="false"
>
  <div class="v-treeview-node__root">
    <div class="v-treeview-node__level">
    </div>
    <div class="v-treeview-node__content">
      <div class="v-treeview-node__label">
      </div>
    </div>
  </div>
</div>
`;

exports[`VTreeViewNode.ts should not be able to have active children with empty array when disabled 1`] = `
<div class="v-treeview-node v-treeview-node--leaf v-treeview-node--click v-treeview-node--disabled"
     aria-expanded="false"
>
  <div class="v-treeview-node__root">
    <div class="v-treeview-node__level">
    </div>
    <div class="v-treeview-node__content">
      <div class="v-treeview-node__label">
        Child
      </div>
    </div>
  </div>
</div>
`;

exports[`VTreeViewNode.ts should not be able to have active children with empty array when loadChildren is specified 1`] = `
<div class="v-treeview-node v-treeview-node--click"
     aria-expanded="true"
>
  <div class="v-treeview-node__root">
    <button class="v-icon--link v-icon notranslate material-icons theme--light v-treeview-node__toggle v-treeview-node__toggle--open"
            aria-hidden="false"
            type="button"
    >
      arrow_drop_down
    </button>
    <div class="v-treeview-node__content">
      <div class="v-treeview-node__label">
        Child
      </div>
    </div>
  </div>
  <div class="v-treeview-node__children">
  </div>
</div>
`;

exports[`VTreeViewNode.ts should render disabled item 1`] = `
<div class="v-treeview-node v-treeview-node--disabled"
     aria-expanded="false"
>
  <div class="v-treeview-node__root">
    <button class="v-icon--link v-icon notranslate mdi mdi-menu-down theme--light v-treeview-node__toggle"
            aria-hidden="false"
            type="button"
    >
    </button>
    <div class="v-treeview-node__content">
      <div class="v-treeview-node__prepend">
        <div>
          foobar
        </div>
      </div>
      <div class="v-treeview-node__label">
        Root
      </div>
      <div class="v-treeview-node__append">
        <div>
          foobar
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VTreeViewNode.ts should use label slot 1`] = `
<div class="v-treeview-node"
     aria-expanded="false"
>
  <div class="v-treeview-node__root">
    <button class="v-icon--link v-icon notranslate mdi mdi-menu-down theme--light v-treeview-node__toggle"
            aria-hidden="false"
            type="button"
    >
    </button>
    <div class="v-treeview-node__content">
      <div class="v-treeview-node__label">
        <div>
          ROOT
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VTreeViewNode.ts should use scoped slots 1`] = `
<div class="v-treeview-node"
     aria-expanded="false"
>
  <div class="v-treeview-node__root">
    <button class="v-icon--link v-icon notranslate mdi mdi-menu-down theme--light v-treeview-node__toggle"
            aria-hidden="false"
            type="button"
    >
    </button>
    <div class="v-treeview-node__content">
      <div class="v-treeview-node__prepend">
        <div>
          foobar
        </div>
      </div>
      <div class="v-treeview-node__label">
        Root
      </div>
      <div class="v-treeview-node__append">
        <div>
          foobar
        </div>
      </div>
    </div>
  </div>
</div>
`;
